--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -25,3 +25,59 @@ btn.participation=Add Participation Details
 btn.project=Add Project Details
 btn.reference=Add Reference Details
 btn.generate=Generate PDF
+
+form.personal.username=User name
+form.personal.fathername=Father Name
+form.personal.gender=Gender
+form.personal.dob=Date of Birth
+form.personal.age=Age
+form.personal.mothername=Mother Name
+form.personal.email=Email Id
+form.personal.phone=Phone No#
+form.personal.maritalstatus=Marital Status
+form.personal.nationality=Nationality
+form.personal.address=Address
+form.personal.language=Language Known
+form.personal.strength=Strength
+form.personal.career=Career Objectives
+form.personal.hobbies=Hobbies
+
+form.education.college=College name
+form.education.degree=Degree
+form.education.subject=Subject
+form.education.year=Year
+form.education.board=Board/University
+form.education.marks=Obtained Marks
+form.education.totalmarks=Total Marks
+form.education.percentage=Percentage
+
+form.project.title=Title of Project
+form.project.guide=Guide of Project
+form.project.frontend=Front End
+form.project.backend=Back End
+form.project.input=Input
+form.project.output=Output
+form.project.description=Description
+
+form.experiance.employer=Employer
+form.experiance.designation=Designation
+form.experiance.joining-date=Joining Date
+form.experiance.leaving-date=Leaving Date
+form.experiance.working=Working
+form.experiance.experience=Experience
+
+form.participation.part-name=Name of Participation
+form.participation.duration=Duration
+form.participation.to=To
+form.participation.sponsored-by=Sponsored by
+form.participation.note=Note
+form.participation.topic=Topic
+form.participation.place=Place
+
+form.reference.name=Name of Reference
+form.reference.designation=Designation
+form.reference.affiliation=Affiliation
+form.reference.email=Email
+form.reference.contact=Contact No
+
+
