--- a/src/main/resources/locale/messages_it.properties
+++ b/src/main/resources/locale/messages_it.properties
@@ -25,3 +25,58 @@ btn.participation=Aggiungi dettagli partecipante
 btn.project=Aggiungi dettagli progetto
 btn.reference=Aggiungi dettagli di riferimento
 btn.generate=Generate PDF
+
+form.personal.username=Nome utente
+form.personal.fathername=Nome del padre
+form.personal.gender=Genere
+form.personal.dob=Data di nascita
+form.personal.age=Età
+form.personal.mothername=Nome della madre
+form.personal.email=Email Id
+form.personal.phone=Phone No#
+form.personal.maritalstatus=Stato civile
+form.personal.nationality=Nazionalità
+form.personal.address=Indirizzo
+form.personal.language=Lingua conosciuta
+form.personal.strength=Forza
+form.personal.career=Obiettivi della carriera
+form.personal.hobbies=Hobby
+
+form.education.college=Nome del college
+form.education.degree=Grado
+form.education.subject=Soggetto
+form.education.year=Anno
+form.education.board=Board / Università
+form.education.marks=Marchi ottenuti
+form.education.totalmarks=Segni totali
+form.education.percentage=Percentuale
+
+form.project.title=Titolo del progetto
+form.project.guide=Guida al progetto
+form.project.frontend=Fine frontale
+form.project.backend=Back end
+form.project.input=Ingresso
+form.project.output=Produzione
+form.project.description=Descrizione
+
+form.experiance.employer=Datore di lavoro
+form.experiance.designation=Designazione
+form.experiance.joining-date=Data di iscrizione
+form.experiance.leaving-date=Data di partenza
+form.experiance.working=Lavoro
+form.experiance.experience=Esperienza
+
+form.participation.name=Nome della partecipazione
+form.participation.duration=Durata
+form.participation.to=A
+form.participation.sponsored-by=Sponsorizzata da
+form.participation.note=Nota
+form.participation.topic=Argomento
+form.participation.place=Posto
+
+form.reference.name=Nome del riferimento
+form.reference.designation=Designazione
+form.reference.affiliation=Affiliazione
+form.reference.email=E-mail
+form.reference.contact=Numero di contatto
+
